--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+body, html {
+  height: 100%;
+}
+
+* {
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +12,18 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #34495e;
+  /* background:url('https://images.unsplash.com/photo-1519750783826-e2420f4d687f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1887&q=80');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center; */
 }
-
+.activeNav{
+  border-bottom: 5px solid #3498db;
+  padding-bottom: 10px;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
